# Excelx-Demo

./: .gitignore  CMakeLists.txt  excelx_demo.cpp
excelx/: CMakeLists.txt  LICENSE
excelx/EXCEL/include/: defs.h  excelop.h
excelx/EXCEL/src/: excelop.cpp
excelx/PLUGINS/include/: fileop.h  info.h
excelx/PLUGINS/src/: add_image_thread.cpp  fileop.cpp  info.cpp
excelx/XML/include/: xmlop.h
excelx/XML/src/: xmlop.cpp
excelx/XML/xml_models/: new_cell.xml  new_drawing.xml  new_drawing_item.xml  new_drawing_xml_rels_image.xml  rels_sheet_relationship.xml
excelx/include/EXCEL/: defs.h  excelop.h
excelx/include/XML/: xmlop.h
excelx/src/EXCEL/: excelop.cpp
excelx/src/PLUGINS/: fileop.cpp  info.cpp
excelx/src/XML/: xmlop.cpp
excelx/xml_models/: content_type.xml  new_cell.xml  new_drawing_item.xml  new_sharedstring.xml  new_sharedstring_rels.xml  rels_sheet_relationship.xml  sheet.xml
excelx/zipper/: CMakeLists.txt
results/: [Content_Types].xml
results/docProps/: core.xml
results/xl/: sharedStrings.xml  styles.xml  workbook.xml
results/xl/_rels/: workbook.xml.rels
results/xl/drawings/: drawing1.xml
results/xl/drawings/_rels/: drawing1.xml.rels
results/xl/worksheets/: sheet1.xml  sheet3.xml  sheet4.xml
results/xl/worksheets/_rels/: sheet1.xml.rels
test_excel/docProps/: core.xml
test_excel/xl/: sharedStrings.xml  styles.xml  workbook.xml
test_excel/xl/worksheets/: sheet1.xml
